# llvm6-passes

./: .gitignore  CMakeLists.txt  README.md  run_printo.sh  setup.sh
passes/printo/: CMakeLists.txt  Printo.cpp
test/: helper.c
